[build-system]
requires = [
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "Elaston"
description = "Elaston - linear elasticity toolbox"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==2.0.0"
]
dynamic = [ "version",]
authors = [
    { name = "Lorem Ipsum", email = "lorem@ipsum.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://elaston.readthedocs.io"
Repository = "https://github.com/pyiron/elaston"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "elaston/_version.py"
parentdir_prefix = "elaston"
tag_prefix = "elaston-"

[tool.setuptools.packages.find]
include = [ "elaston*",]

[tool.setuptools.dynamic.version]
attr = "elaston.__version__"
