[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "Elaston"
description = "Elaston - linear elasticity toolbox"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "semantikon==0.0.27",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://elaston.readthedocs.io"
Repository = "https://github.com/pyiron/elaston"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "elaston/_version.py"
parentdir_prefix = "elaston"
tag_prefix = "elaston-"

[tool.setuptools.packages.find]
include = [ "elaston*",]

[tool.setuptools.dynamic.version]
attr = "elaston.__version__"
