[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "Elaston"
description = "Elaston - linear elasticity toolbox"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.11, <3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "semantikon==0.0.27",
]
dynamic = [ "version",]
authors = [
    { name = "Sam Waseda", email = "waseda@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://elaston.readthedocs.io"
Repository = "https://github.com/pyiron/elaston"

[tool.hatch.build]
include = [
    "elaston"
]

[tool.hatch.build.hooks.vcs]
version-file = "elaston/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "elaston"
]

[tool.hatch.build.targets.wheel]
packages = [
    "elaston"
]

[tool.hatch.version]
source = "vcs"
path = "elaston/_version.py"


[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
non_interactive = true
install_types = true
